# python-cli

./: README.md  git.py  main.py  pyproject.toml
src/recticode/: __init__.py  git_code.py  main.py
