[project]
name = "recticode"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VulcanWM", email = "vulcanwmemail@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[project.scripts]
recticode = "recticode.main:app"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
